[gd_scene load_steps=4 format=3 uid="uid://dqmvr5m4k7qfq"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="2_grid"]
[ext_resource type="Script" path="res://scripts/input_handler.gd" id="3_input"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.980392, 0.968627, 0.941176, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopPanel" type="Panel" parent="UI"]
offset_left = 20.0
offset_top = 40.0
offset_right = 700.0
offset_bottom = 180.0

[node name="Title" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 48
text = "2048"

[node name="ScoreLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 20.0
offset_right = 540.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 18
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1

[node name="BestLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 560.0
offset_top = 20.0
offset_right = 660.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 18
text = "BEST"
horizontal_alignment = 1

[node name="BestValue" type="Label" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 560.0
offset_top = 50.0
offset_right = 660.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/TopPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 160.0
offset_bottom = 130.0
text = "Restart"

[node name="GridContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 220.0
offset_right = 700.0
offset_bottom = 900.0

[node name="GridBackground" type="Panel" parent="GridContainer"]
layout_mode = 0
offset_right = 680.0
offset_bottom = 680.0

[node name="Grid" type="Node2D" parent="GridContainer"]
position = Vector2(20, 20)
script = ExtResource("2_grid")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("3_input")
